package example.designpattern.behavioral.mediator;

//抽象中介者
abstract class Mediator {
	public abstract void componentChanged(Component c);
}  